--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav-open {
+  visibility: visible;
+  transform: translateX(0%);
+  opacity: 1;
+  transition: visibility 0s, opacity 0.3s linear, transform 0.3s ease-in-out;
+}
+
+.nav-closed {
+  visibility: hidden;
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: visibility 0s 0.3s, opacity 0.3s linear,
+    transform 0.3s ease-in-out;
+}
