--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,3 +17,5 @@
 .bg-color {
   background-color: #111111;
 }
+
+/* animation */
