--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .nav-link {
-  @apply relative ml-10 text-gray-500 font-mono font-bold tracking-[1px] hover:text-blue-400;
+  @apply relative text-gray-500 font-mono font-bold tracking-[1px] hover:text-blue-400;
 }
 
 .nav-link::after {
@@ -14,8 +14,25 @@
   @apply w-[100%];
 }
 
+@media (min-width: 768px) {
+  .bg-mobile {
+    background-image: none !important;
+  }
+}
+@media (max-width: 767px) {
+  .bg-mobile {
+    background-image: url("../public/images/bg-2.jpg") !important;
+    background-size: cover;
+    background-position: center;
+    height: 100vh; /* Chiều cao toàn màn hình */
+  }
+}
+
 .bg-color {
   background-color: #111111;
 }
 
+.break-words {
+  word-break: break-word;
+}
 /* animation */
